Fixed banner stretching itself

--- a/012 CSS - Grid introduktion/style.css
+++ b/012 CSS - Grid introduktion/style.css
@@ -19,6 +19,7 @@ header {
     grid-column: 1 / -1;
     display: flex;
     justify-content: center;
+    align-items: flex-start;
 }
 
 /* Main grid */
